--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>GEORGE MAHINDA PORTFOLIO</h1>
-						<p>A passionate and results-driven <a href="">Software Developer</a> with strong experience in <br /> PHP, Python, Laravel, MySQL, MongoDB, and React</p>
+						<p>A passionate and results-driven <a href="">Software Developer</a> with strong experience in <br /> PHP, Python, Laravel, MySQL, MongoDB, React among many</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -31,8 +31,10 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<!--<li><a href="generic.html">Testimonials</a></li>-->
+							<li><a href="#">Testimonials</a></li>
+							<!--<li><a href="elements.html">Elements Reference</a></li>-->
+							<li><a href="#">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://wa.me/+254706558747" class="icon brands fa-whatsapp" target="_blank" rel="noopener noreferrer"><span class="label">WhatsApp</span></a></li>
@@ -49,16 +51,14 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">January 25, 2023</span>
+									<h2><a href="#">HenAnn's POS System</a></h2>
+									<p>Offers advanced technologies to your Shop or Restaurant with All-in-One <strong>Local</strong> and <strong>Cloud-based</strong> POS.<br />
+										Powering Local Commerce, One Sale at a Time</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/HenAnn's POS.png" alt="Sales Page" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" onclick="toggleStory()" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
@@ -66,53 +66,53 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">April 24, 2024</span>
+										<h2><a href="#">School Website<br /> Bidii Academy</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/BidiiAcademy.png" alt="BidiiAcademy" /></a>
+									<p>Designed and developed a responsive school website for Bidii Academy featuring class updates, announcements, and an image gallery. Built with Laravel and Bootstrap.</p>
+
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">October 1, 2020</span>
+										<h2><a href="#">Hotel System<br />
+										Chadel Restaurant</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Hotel.jpeg" alt="Hotel" /></a>
+									<p>Built a custom hotel system for Chadel Restaurant featuring order tracking, table management, billing, and kitchen coordination. Designed for speed and ease of use.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">December 18, 2022</span>
+										<h2><a href="#">Hospital System<br />
+										Full HMIS ERP</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Hospital.jpeg" alt="Hospital" /></a>
+									<p>Worked on a full HMIS ERP system featuring modules for patient management, billing, pharmacy, and labs — improving service delivery.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">January 14, 2023</span>
+										<h2><a href="#">Property System<br />
+										Full ERP</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/Properties.png" alt="" /></a>
+									<p>Helped build a Property ERP system that simplifies tenant management, rent tracking, and maintenance workflows for real estate firms and landlords.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--<article>
 									<header>
 										<span class="date">April 11, 2017</span>
 										<h2><a href="#">Odio magna<br />
@@ -123,8 +123,8 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-								<article>
+								</article>-->
+								<!--<article>
 									<header>
 										<span class="date">April 7, 2017</span>
 										<h2><a href="#">Augue lorem<br />
@@ -135,8 +135,25 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
+								</article>-->
 							</section>
+
+						<!-- Full Story -->
+						<section id="full-story" style="display: none;">
+							<h2>The Story of HenAnn POS</h2>
+							<p>In the heart of a bustling Kenyan marketplace, where small businesses are the lifeblood of the economy, a challenge was quietly brewing. Shopkeepers were juggling handwritten receipts, manual stocktaking, and endless end-of-day calculations. Mistakes were common, sales were lost, and stock often ran out unexpectedly. It was time for a change.
+
+								Enter HenAnn POS — a lightweight, modern point-of-sale system, built with Laravel Jetstream, tailored to the real needs of local business owners. It wasn't just another POS — it was built from the ground up with simplicity, speed, and reliability in mind.
+
+								Designed by a developer who understood the rhythm of small shops and wholesale stores, HenAnn POS runs smoothly as a desktop application via Electron, needing no complicated installations or internet connections. Just open it, and it's ready to go. One central machine acts as the server, while multiple others connect on the local network — no fancy infrastructure required.
+
+								Behind the scenes, Laravel powers the logic, while jobs like automated stock deduction are queued in the background for maximum speed and accuracy. With Supervisor managing the queue workers silently, HenAnn ensures that every sale reflects immediately in your inventory — no delay, no error.
+
+								From barcode scanning to customer tracking, from wholesale pricing to flexible units of measure, HenAnn POS doesn’t just sell products — it empowers businesses to grow, scale, and thrive in the digital age.
+
+								Whether you're selling sugar in sacks, groceries in grams, or electronics by the unit, HenAnn POS is your silent, reliable partner at the counter.</p>
+						</section>
+
 
 						<!-- Footer -->
 							<footer>
