--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>George Mahinda</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -30,7 +30,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Coding Adventure</a></li>
 							<!--<li><a href="generic.html">Testimonials</a></li>-->
 							<li><a href="#">Testimonials</a></li>
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
@@ -41,7 +41,7 @@
 							<li><a href="https://x.com/HenannT" class="icon brands fa-twitter" target="_blank" rel="noopener noreferrer"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands fa-facebook-f" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+							<li><a href="https://henannt.github.io/GeorgeMahindaPortfolio/" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -215,7 +215,7 @@
 									<li><a href="https://x.com/HenannT" class="icon brands alt fa-twitter" target="_blank" rel="noopener noreferrer"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands alt fa-facebook-f" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands alt fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
+									<li><a href="https://henannt.github.io/GeorgeMahindaPortfolio/" class="icon brands alt fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
