--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 						<ul class="icons">
 							<li><a href="https://wa.me/+254706558747" class="icon brands fa-whatsapp" target="_blank" rel="noopener noreferrer"><span class="label">WhatsApp</span></a></li>
 							<li><a href="https://x.com/HenannT" class="icon brands fa-twitter" target="_blank" rel="noopener noreferrer"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands fa-facebook-f" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/Henan.Tychicus" class="icon brands fa-facebook-f" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.facebook.com/Henan.Tychicus" class="icon brands fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
 							<li><a href="https://henannt.github.io/GeorgeMahindaPortfolio/" class="icon brands fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -213,8 +213,8 @@
 								<ul class="icons alt">
 									<li><a href="https://wa.me/+254706558747" class="icon brands alt fa-whatsapp" target="_blank" rel="noopener noreferrer"><span class="label">WhatsApp</span></a></li>
 									<li><a href="https://x.com/HenannT" class="icon brands alt fa-twitter" target="_blank" rel="noopener noreferrer"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands alt fa-facebook-f" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.facebook.com/share/1HooPfZVn9/" class="icon brands alt fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.facebook.com/Henan.Tychicus" class="icon brands alt fa-facebook-f" target="_blank" rel="noopener noreferrer"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/Henan.Tychicus" class="icon brands alt fa-instagram" target="_blank" rel="noopener noreferrer"><span class="label">Instagram</span></a></li>
 									<li><a href="https://henannt.github.io/GeorgeMahindaPortfolio/" class="icon brands alt fa-github" target="_blank" rel="noopener noreferrer"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
