--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<body>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
+				<div class="bg"></div>
 
 				<!-- Intro -->
 					<div id="intro">
 						<h1>GEORGE MAHINDA PORTFOLIO</h1>
-						<p>A passionate and results-driven <a href="">Software Developer</a> with strong experience in <br /> PHP, Python, Laravel, MySQL, MongoDB, React among many</p>
+						<p>A passionate and results-driven <a href="">Software Developer</a> with a strong experience in <br /> PHP, Python, Laravel, MySQL, MongoDB, React among many</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -31,10 +32,6 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Coding Adventure</a></li>
-							<!--<li><a href="generic.html">Testimonials</a></li>-->
-							<li><a href="#">Testimonials</a></li>
-							<!--<li><a href="elements.html">Elements Reference</a></li>-->
-							<li><a href="#">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://wa.me/+254706558747" class="icon brands fa-whatsapp" target="_blank" rel="noopener noreferrer"><span class="label">WhatsApp</span></a></li>
@@ -51,12 +48,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">January 25, 2023</span>
-									<h2><a href="#">HenAnn's POS System</a></h2>
-									<p>Offers advanced technologies to your Shop or Restaurant with All-in-One <strong>Local</strong> and <strong>Cloud-based</strong> POS.<br />
-										Powering Local Commerce, One Sale at a Time</p>
+									<span class="date">About Me</span>
+									<h2><a href="#">George the Dev</a></h2>
+									<p>Hi! I’m George Mahinda, a full-stack developer from Nairobi with a deep passion for solving real-world problems using clean, efficient code. Whether it’s building POS systems or web applications, I bring focus, creativity, and technical depth to every project I touch.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/HenAnn's POS.png" alt="Sales Page" /></a>
+								<a href="#" class="image main"><img src="images/TheDev.jpg" alt="Sales Page" /></a>
 								<ul class="actions special">
 									<li><a href="#" onclick="toggleStory()" class="button large">Full Story</a></li>
 								</ul>
@@ -64,6 +60,73 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<!-- Skills -->
+								<article aria-label="Certified Skills and Project">
+									<header>
+										<span class="date">Certified</span>
+										<h2><a href="#" aria-label="Skills">🛠 Skills</a></h2>
+									</header>
+
+									<!-- Bold list: either via <strong> or better via CSS class -->
+									<ul class="skills-list">
+										<li>PHP &amp; Laravel</li>
+										<li>Python</li>
+										<li>JavaScript / Vue / React</li>
+										<li>HTML / CSS / Tailwind</li>
+										<li>MySQL &amp; MongoDB</li>
+										<li>Git &amp; GitHub</li>
+									</ul>
+
+									<p>Certified in key web development technologies (e.g., PHP/Laravel, Python, JavaScript frameworks, and database systems)</p>
+
+									<ul class="actions special">
+										<li><a href="#" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<!-- Certifications -->
+								<article>
+									<header>
+										<span class="date">Certified</span>
+										<h2><a href="#">🏅 Certifications</a></h2>
+									</header>
+
+									<ul class="cert-list">
+										<li><strong>Programming Certificate – IYF</strong> (April 2025)</li>
+										<li><strong>Laravel Web Development</strong> – Online Course / Bootcamp</li>
+										<li><strong>IT Certificate</strong> – PLP Africa</li>
+										<li><strong>Database Fundamentals</strong> – MySQL & MongoDB</li>
+									</ul>
+
+									<p>
+										These certifications demonstrate my expertise in web development, programming, and database management,
+										providing a solid foundation for building scalable, responsive applications.
+									</p>
+
+									<ul class="actions special">
+										<li><a href="assets/docs/George Mahinda Resume.pdf" class="button" download>📄 Download My CV</a></li>
+									</ul>
+								</article>
+								<!-- Interests -->
+								<article>
+									<header>
+										<span class="date">Personal</span>
+										<h2><a href="#">🎯 Interests</a></h2>
+									</header>
+
+									<ul class="interests-list">
+										<li><strong>Web Development</strong> – Exploring modern frameworks and tools</li>
+										<li><strong>Open Source</strong> – Contributing to community projects</li>
+										<li><strong>UI/UX Design</strong> – Creating accessible and user-friendly interfaces</li>
+										<li><strong>Tech Blogging</strong> – Writing tutorials and sharing knowledge</li>
+										<li><strong>Problem Solving</strong> – Participating in coding challenges</li>
+									</ul>
+
+									<p>
+										Beyond coding, I enjoy continuous learning, Swimming, Cycling, sharing knowledge, and experimenting
+										with new technologies to enhance both my personal and professional projects.
+									</p>
+								</article>
+
 								<article>
 									<header>
 										<span class="date">April 24, 2024</span>
@@ -88,7 +151,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<article>
+								<!--<article>
 									<header>
 										<span class="date">December 18, 2022</span>
 										<h2><a href="#">Hospital System<br />
@@ -99,8 +162,8 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-								<article>
+								</article>-->
+								<!--<article>
 									<header>
 										<span class="date">January 14, 2023</span>
 										<h2><a href="#">Property System<br />
@@ -111,31 +174,19 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>
-								<!--<article>
+								</article>-->
+								<article>
 									<header>
 										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<h2><a href="#">HenAnn's POS System</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/HenAnn's%20POS.png" alt="" /></a>
+									<p>Offers advanced technologies to your Shop or Restaurant with All-in-One <strong>Local</strong> and <strong>Cloud-based</strong> POS.<br />
+										Powering Local Commerce, One Sale at a Time</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
-								</article>-->
-								<!--<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>-->
+								</article>
 							</section>
 
 						<!-- Full Story -->
@@ -227,15 +278,6 @@
 					</div>
 
 			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
