--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>GEORGE MAHINDA PORTFOLIO</h1>
-						<p>A passionate and results-driven <a href="">Software Developer</a> with a strong experience in <br /> PHP, Python, Laravel, MySQL, MongoDB, React among many</p>
+						<p>A passionate and results-driven <a href="">Software Developer</a> with strong experience in <br /> PHP, Python, Laravel, MySQL, MongoDB, React among many</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
